[tool.poetry]
name = "ateez_lyrics"
version = "0.1.0"
description = ""
authors = ["Eric Nguyen <etndevel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
